# OMeGA

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
include/: midi.h  scale.h  speaker.h  version.h.in
include/algorithm/: genetic.cpp  genetic.h
include/utility/: logger.h
lib/: OMeGA_lib.lib
src/: main.cpp  midi.cpp  midi.h  scale.cpp  scale.h  speaker.cpp  speaker.h  version.h  version.h.in
src/algorithm/: genetic.cpp  genetic.h
src/utility/: logger.cpp  logger.h
